# datastructures-c

./: CMakeLists.txt
demos/: CMakeLists.txt
demos/src/: main.c
lib/: CMakeLists.txt
lib/include/: lib.h  types.h
lib/include/list/: array_list.h  list.h
lib/src/list/: array_list.c
